--- a/style.css
+++ b/style.css
@@ -1,22 +1,3 @@
-body {
-  font-size: 20pt;
-  font-family:'DotGothic16', sans-serif;
-  overflow-y: scroll;
- 
-  background-size: cover;
-  font-weight: bold;
-  
-  
-}
-.main {
-   font-family:'DotGothic16', sans-serif;
-  line-height: .8;
-  color:white;
-  font-weight: bold;
-
-  
-  
-  
 .titulo {
 padding: 2em;
 height: 10em;
@@ -37,7 +18,7 @@ align-items: center;
 }
 
 .imagen {
-background-image: url(imagen0.gif);
+background-image: url(deportesaereos.jpg);
 background-position:center;
 background-repeat:no-repeat;
 background-size:cover;
