--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+body {
+  font-size: 20pt;
+  font-family:'DotGothic16', sans-serif;
+  overflow-y: scroll;
+  background-image: url("llanu.jpg");
+  background-size: cover;
+  font-weight: bold;
+  
+  
+}
+
 .titulo {
 padding: 2em;
 height: 10em;
