--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ border-radius: 0.5em;
 
 .tarjeta {
     width: 15em;
-    background-color: black;
+    background-color: yellow;
     
     margin: 0.5rem;
     padding: em;
